--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,39 @@
+body {
+    /* Full height */
+    /* height: 200%;  */
+    /* Center and scale the image nicely */
+    background-position: center;
+    background-repeat: repeat;
+    background-size: auto;
+}
+
 .divsInline {
     float: left;
 }
 
 #gifontainer {
     width: 100%;
+}
+
+.hero {
+    background-color: black;
+    color: white;
+    border-radius: 25%;
+}
+
+#top-container {
+    margin-top: 30px;
+}
+
+#add-hero {
+    background-color: black;
+    color: white;
+    border-radius: 25%;
+    width: 80%;
+    margin-top: 10px;
+}
+
+#hero-input {
+    width: 80%;
+    margin-top: 30px;
 }
